--- a/css/styles.css
+++ b/css/styles.css
@@ -4,40 +4,95 @@
 /* and above unless overwritten below */
 
 body {
-  background: #a2c2d2;
+  background: #2E8BC0;
   margin: 0;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Benne', serif;
+  z-index: 0;
 }
-h1{
+#menuToggler{
+  position: fixed;
+  top: 0.5em;
+  right: 0.5em;
+  height: 1em;
+  width: 1em;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 20;
+  background-color: rgba(0,0,139, 0.7);
+  padding: 0.25em;
+}
+#menuToggler div {
+  height: 20%;
+  background: #145DA0;
+  transition: 0.3s;
+}
+#menuToggler.open div:nth-child(1){
+  transform: translateY(0.4em) rotate(45deg);
+}
+#menuToggler.open div:nth-child(2){
+  opacity: 0;
+}
+#menuToggler.open div:nth-child(3){
+  transform: translateY(-0.4em) rotate(-45deg);
+}
+header, main, section, article {
+	overflow: auto;
+}
+header nav {
+  font-weight: 100;
+  letter-spacing: 0.25em;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  text-align: center;
   justify-content: center;
-  color: #ff7749;
-  font-size: 3.5em;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(137,207,240, 0.7);
+  transform: translate(100vw);
+  transition: 0.4s;
+  z-index: 19;
+}
+nav a {
+  margin: 1em 2em 1em 2em;
+  text-decoration: none;
+  justify-content: center;
+  color: #694b83;
+  font-size: 1.4em;
   font-weight: bold;
+  transition: color 0.4s;
+  border-bottom: 1px solid #5e647e;
+}
+nav .open {
+  transform: translateX(0);
+  opacity: 1;
+}
+header h1, header p {
+  color: white;
+  margin: 0 0 0 0.5em;
+  z-index: 15;
+}
+header p {
+  line-height: 1em;
+  margin-bottom: 10px;
+}
+#menuToggler.open + header nav {
+  transform: translate(0);
+}
+header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter: grayscale(90%);
 }
 h2{
   color: #5e647e;
   font-weight: bolder;
   margin-left: 30px;
   font-size: 1.7em;
-  font
-}
-nav {
-  margin-top: 10px;
-  display: flex;
-  background-color: #FBFBFB;
-  justify-content: center;
-  border-top: 1px solid #5e647e;
-  border-bottom: 1px solid #5e647e;
-}
-nav a {
-  margin-right: 1em;
-  margin-left: 1em;
-  text-decoration: none;
-  color: #694b83;
-  font-size: 1.5em;
-  font-weight: 100;
-  transition: color 0.4s;
 }
 nav a:hover {
   color: black;
@@ -52,21 +107,18 @@ main {
   float: none;
   border-top: 1px solid #5e647e;
   border-bottom: 1px solid #5e647e;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 main p {
-  margin-top: 2em;
+  margin: 2em 0 2em 0;
   font-size: 1.1em;
+  color: white;
 }
-p {
-  color: #ff7749;
-  line-height: 1.5em;
-}
+
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 0 20px 0;
   width: 100%;
 }
 section {
@@ -78,34 +130,23 @@ footer {
 }
 
 
-
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
-
-  /* applies to screens wider than 499px */
-
+  #menuToggler {
+    display: none;
+  }
   body {
     background: #dbeff9;
   }
+  nav {
+  display: flex;
+  flex-direction: row;
 }
-
-
+}
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
 
-  /* applies to screens wider than 999px */
-
-  body {
-    background: #dbeff9;
-  }
-  section {
-    flex-direction: row;
-  }
-  img {
-    flex-basis: 30%;
-    width: 30%;
-  }
 }
