--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   z-index: 20;
-  background-color: rgba(0,0,139, 0.7);
+  background-color: rgba(137, 207, 240, 0.85);
   padding: 0.25em;
 }
 #menuToggler div {
@@ -51,9 +51,9 @@ header nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(137,207,240, 0.7);
-  transform: translate(100vw);
-  transition: 0.4s;
+  background-color: rgb(137,207,240, 0.85);
+  transform: translateY(100vh);
+  transition: 0.5s;
   z-index: 19;
 }
 nav a {
@@ -64,15 +64,20 @@ nav a {
   font-size: 1.4em;
   font-weight: bold;
   transition: color 0.4s;
-  border-bottom: 1px solid #5e647e;
+}
+nav div {
+  height: 3px;
+  width: 60%;
+  margin: 0 auto 0 auto;
+  background: #145DA0;
 }
 nav .open {
-  transform: translateX(0);
-  opacity: 1;
+  transform: translateY(0);
 }
 header h1, header p {
   color: white;
-  margin: 0 0 0 0.5em;
+  margin: 0 0 0 10px;
+  letter-spacing: 0.05em;
   z-index: 15;
 }
 header p {
@@ -88,65 +93,114 @@ header img {
   margin-right: auto;
   filter: grayscale(90%);
 }
-h2{
-  color: #5e647e;
-  font-weight: bolder;
-  margin-left: 30px;
-  font-size: 1.7em;
-}
 nav a:hover {
   color: black;
   text-decoration: underline;
 }
 main {
-  padding-left: 20px;
-  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 15px 0 15px;
   max-width: 75%;
-  margin-right: auto;
-  margin-left: auto;
   float: none;
-  border-top: 1px solid #5e647e;
-  border-bottom: 1px solid #5e647e;
-  margin-top: 25px;
+  margin: 1em auto 1.5em auto;
 }
 main p {
   margin: 2em 0 2em 0;
   font-size: 1.1em;
   color: white;
 }
-
+section {
+  margin: 0.3em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+section p.quote {
+  margin: 0.75em;
+  padding: 0.4em 0 0.4em 0;
+  border-top: 1px solid #5e647e;
+  border-bottom: 1px solid #5e647e;
+  text-align: center;
+}
+section img {
+  margin: 0;
+  filter: grayscale(90%);
+}
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
 }
-section {
-  display: flex;
-  flex-direction: column;
+section.polaroid {
+  flex-direction: row;
+  margin: 0.5em 0 0.5em 0;
+}
+div.cardImg {
+  margin: 0.4em 1em 0.4em 1em;
+  width: 75%;
+  background-color: #B1D4E0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
+img.polaroid {
+  margin: 0;
 }
 footer {
-  padding: 20px 0 35px 0;
+  padding: 10px 0 10px 0;
+  background-color: #B1D4E0;
 }
-
+section.socialIcons {
+  flex-direction: row;
+  font-size: 2.5em;
+  margin: 0;
+}
+section.socialIcons p {
+  margin: 0.25em 0.5em 0.25em 0.5em;
+}
+section.socialIcons p a {
+  color: #145DA0;
+  text-decoration: none;
+}
 
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
-  #menuToggler {
-    display: none;
-  }
   body {
-    background: #dbeff9;
+    background: #2E8BC0;
   }
-  nav {
-  display: flex;
-  flex-direction: row;
-}
+  #menuToggler{
+    top: 1em;
+    right: 1em;
+    height: 1.5em;
+    width: 1.5em;
+  }
+  #menuToggler div {
+    height: 22%;
+  }
+  #menuToggler.open div:nth-child(1){
+    transform: translateY(0.575em) rotate(45deg);
+  }
+  #menuToggler.open div:nth-child(2){
+    opacity: 0;
+  }
+  #menuToggler.open div:nth-child(3){
+    transform: translateY(-0.575em) rotate(-45deg);
+  }
+  header img {
+    background-image: url(https://placekitten.com/700/300);
+  }
 }
 
 /* DESKTOP STYLES */
 
 @media screen and (min-width: 1000px) {
-
+  #menuToggler {
+    display: none;
+  }
 }
