--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,7 @@ body {
 #menuToggler.open div:nth-child(3){
   transform: translateY(-0.4em) rotate(-45deg);
 }
-header, main, section, article {
-	overflow: auto;
-}
-header nav {
+nav {
   font-weight: 100;
   letter-spacing: 0.25em;
   display: flex;
@@ -71,18 +68,23 @@ nav div {
   margin: 0 auto 0 auto;
   background: #145DA0;
 }
-nav .open {
+nav.open {
   transform: translateY(0);
 }
-header h1, header p {
+header h1, header h2 {
   color: white;
   margin: 0 0 0 10px;
   letter-spacing: 0.05em;
   z-index: 15;
 }
-header p {
+header h1{
+  font-size: 2em;
+}
+header h2 {
   line-height: 1em;
   margin-bottom: 10px;
+  font-weight: lighter;
+  font-size: 1.25em;
 }
 #menuToggler.open + header nav {
   transform: translate(0);
@@ -94,8 +96,7 @@ header img {
   filter: grayscale(90%);
 }
 nav a:hover {
-  color: black;
-  text-decoration: underline;
+  color: #694b83;
 }
 main {
   display: flex;
@@ -110,12 +111,6 @@ main p {
   margin: 2em 0 2em 0;
   font-size: 1.1em;
   color: white;
-}
-section {
-  margin: 0.3em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 section p.quote {
   margin: 0.75em;
@@ -154,6 +149,9 @@ img.polaroid {
 footer {
   padding: 10px 0 10px 0;
   background-color: #B1D4E0;
+}
+footer p {
+  margin: 0.5em;
 }
 section.socialIcons {
   flex-direction: row;
@@ -202,5 +200,62 @@ section.socialIcons p a {
 @media screen and (min-width: 1000px) {
   #menuToggler {
     display: none;
+  }
+  section.title-nav {
+    margin: 0.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  section.title {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1em;
+  }
+  section.nav-bar {
+    margin: auto;
+    padding-left: 5em;
+  }
+  nav {
+    font-weight: 100;
+    letter-spacing: 0.25em;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    position: static;
+    justify-content: flex-end;
+    background-color: rgb(137,207,240, 0);
+    transform: none;
+    height: auto;
+    width: auto;
+    top: auto;
+    left: auto;
+  }
+  nav a {
+    margin: 0.5em;
+    text-decoration: none;
+    justify-content: center;
+    color: white;
+    font-size: 1.4em;
+    font-weight: lighter;
+    transition: color 0.4s;
+  }
+  nav div {
+    display: none;
+  }
+
+  section.img-segment {
+    display: flex;
+    flex-direction: row;
+  }
+  header h1 {
+    font-size: 3em;
+  }
+  header h2 {
+    font-size: 1.25em;
+    font-weight: lighter;
+  }
+  section p.quote {
+    font-size: 1.5em;
   }
 }
