--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ header h2 {
 #menuToggler.open + header nav {
   transform: translate(0);
 }
-header img {
+img.top-banner {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -129,9 +129,15 @@ img {
   margin-right: auto;
   width: 100%;
 }
+section.img-segment {
+  display: flex;
+  flex-direction: column;
+}
 section.polaroid {
+  display: flex;
   flex-direction: row;
-  margin: 0.5em 0 0.5em 0;
+  justify-content: center;
+  margin: 0.5em;
 }
 div.cardImg {
   margin: 0.4em 1em 0.4em 1em;
@@ -143,10 +149,10 @@ div.container {
   text-align: center;
   padding: 10px 20px;
 }
-img.polaroid {
-  margin: 0;
-}
+
 footer {
+  display: flex;
+  justify-content: center;
   padding: 10px 0 10px 0;
   background-color: #B1D4E0;
 }
@@ -154,7 +160,9 @@ footer p {
   margin: 0.5em;
 }
 section.socialIcons {
+  display: flex;
   flex-direction: row;
+  align-items: center;
   font-size: 2.5em;
   margin: 0;
 }
@@ -202,19 +210,29 @@ section.socialIcons p a {
     display: none;
   }
   section.title-nav {
-    margin: 0.5em;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
+  }
+  section.full-title {
+    display: flex;
+    flex-direction: column;
   }
   section.title {
     display: flex;
-    flex-direction: column;
+    margin: 0.5em 0.5em 0 0.5em;
     padding-left: 1em;
   }
+  section.sub-title {
+    display: flex;
+    margin: 0 0.5em 0.5em 0.5em;
+    padding-left: 1.5em;
+  }
   section.nav-bar {
-    margin: auto;
-    padding-left: 5em;
+    display: flex;
+    margin: 0.5em;
+    padding: 3.75em 2em 0 0;
+    align-items: baseline;
   }
   nav {
     font-weight: 100;
@@ -223,7 +241,6 @@ section.socialIcons p a {
     flex-direction: row;
     text-align: center;
     position: static;
-    justify-content: flex-end;
     background-color: rgb(137,207,240, 0);
     transform: none;
     height: auto;
@@ -234,7 +251,6 @@ section.socialIcons p a {
   nav a {
     margin: 0.5em;
     text-decoration: none;
-    justify-content: center;
     color: white;
     font-size: 1.4em;
     font-weight: lighter;
@@ -243,19 +259,42 @@ section.socialIcons p a {
   nav div {
     display: none;
   }
-
   section.img-segment {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
   header h1 {
     font-size: 3em;
   }
   header h2 {
+    margin: 0;
     font-size: 1.25em;
     font-weight: lighter;
   }
   section p.quote {
     font-size: 1.5em;
+  }
+}
+@media screen and (min-width: 1400px) {
+  section.full-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  section.title {
+    display: flex;
+    margin: 0.5em;
+    padding-left: 1em;
+  }
+  section.sub-title {
+    display: flex;
+    margin: 1em;
+    padding-top: 2em;
+    padding-left: 0;
+  }
+  img.top-banner{
+    box-sizing: border-box;
+    margin: 0 4em 0 4em;
   }
 }
