--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ body {
   flex-direction: column;
   justify-content: space-around;
   z-index: 20;
-  background-color: none;
   padding: 0.25em;
 }
 #menuToggler div {
@@ -192,6 +191,7 @@ section img {
   height: 300px;
 }
 .about-description {
+  width: 100%;
   margin: 0.5em;
 }
 div.footer {
@@ -230,7 +230,6 @@ section.social-icons p a {
 
 @media screen and (min-width: 600px) {
   #menuToggler{
-    top: 1em;
     right: 1em;
     height: 1em;
     width: 2em;
@@ -247,7 +246,7 @@ section.social-icons p a {
   header img {
     background-image: url(https://placekitten.com/500/250);
   }
-  section.hero-banner {
+  .hero-banner {
     display: grid;
     grid-row-gap: 1.5em;
     grid-column-gap: 1em;
@@ -276,6 +275,15 @@ section.social-icons p a {
   }
   .project-img {
     height: 425px;
+  }
+  .about-img {
+    height: 400px;
+  }
+  .about-description h2 {
+    font-size: 3em;
+  }
+  .about-description p {
+    font-size: 1.5em;
   }
 }
 
@@ -392,6 +400,16 @@ section.social-icons p a {
   .project-img:hover {
     transform: translateY(-0.36em);
     opacity: 0.7;
+  }
+  .about-img {
+    align-self: center;
+    width: 80%;
+    height: 500px;
+  }
+  .about-description {
+    width: 80%;
+    align-self: center;
+    margin: 0.5em;
   }
 }
 @media screen and (min-width: 1400px) {
